# TARZAN

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TARZANConfig.cmake.in  executableFile.cpp  install_library.sh  library.cpp
.github/workflows/: static.yml
TARZAN/: backwardReachabilityTester.cpp  executableFile.cpp
TARZAN/benchmarkExecutables/: flower.cpp
TARZAN/benchmark_executables/: SRlatch.cpp  and_or_original.cpp  boolean.cpp  csma.cpp  exSITH.cpp  fischer.cpp  flower.cpp  gates.cpp  latch.cpp  lynch.cpp  maler.cpp  medical_workflow.cpp  mpeg2.cpp  pagerank.cpp  rcp.cpp  ring.cpp  simple.cpp  soldiers.cpp  trainAHV93.cpp  vikings.cpp
TARZAN/benchmark_scripts/: benchmark_tarzan.sh  benchmark_tchecker.sh  benchmark_uppaal.sh  flower.sh  generate_benchmark_summary.sh  generate_latex_tables.py  run_all.sh  sh_network_ta.sh  sh_single_ta.sh  z_run_all_benchmarks.sh
TARZAN/benchmark_scripts/helpers/: sh_network_ta.sh  sh_single_ta.sh
TARZAN/benchmarks/: convert_xta_to_tck.py  converter.py
TARZAN/benchmarks/TrainAHV93_9/: controller.txt  train1.txt  train2.txt  train7.txt  train8.txt  train9.txt
TARZAN/benchmarks/benchmark_executables/: exSITH.cpp  fischer.cpp  latch.cpp  pagerank.cpp  soldiers.cpp  vikings.cpp
TARZAN/benchmarks/benchmark_scripts/: benchmark_tarzan.sh  benchmark_tchecker.sh  benchmark_uppaal.sh  compact_tables.py  generate_benchmark_summary.sh  generate_latex_tables.py  run_all.sh
TARZAN/benchmarks/boolean/: Template1.txt  Template10.txt  Template11.txt  Template12.txt  Template14.txt  Template16.txt  Template2.txt  Template3.txt  Template5.txt  Template8.txt  generate_boolean.py
TARZAN/benchmarks/bridge/: generate_bridge.py  soldier00.txt  soldier05.txt  soldier06.txt  soldier07.txt  torch.txt
TARZAN/benchmarks/csma_20N/: P00.txt  P08.txt  P11.txt  P12.txt  P15.txt
TARZAN/benchmarks/csma_50N/: P00.txt  P02.txt  P03.txt  P13.txt  P14.txt  P16.txt  P18.txt  P20.txt  P21.txt  P22.txt  P24.txt  P25.txt  P26.txt  P29.txt  P31.txt  P32.txt  P33.txt  P35.txt  P36.txt  P37.txt  P39.txt  P41.txt  P44.txt  P47.txt  P49.txt  P50.txt
TARZAN/benchmarks/fischer/: fischer00.txt  fischer01.txt  fischer02.txt  fischer03.txt  fischer04.txt  generate_fischer.py
TARZAN/benchmarks/fischerFlat/: boundedGen.py
TARZAN/benchmarks/flower/: generate_flower.py  test_flower.txt
TARZAN/benchmarks/maler/: job1.txt
TARZAN/benchmarks/mpeg2/: generate_mpeg.py
TARZAN/benchmarks/pagerank/: Stage02.txt  Stage03.txt  Stage13.txt
TARZAN/benchmarks/rcp/: node1.txt
TARZAN/benchmarks/ring_network/: ring00.txt  ring01.txt  ring05.txt  ring06.txt  ring10.txt
TARZAN/benchmarks/trainAHV93/: generate_trainAHV93.py
TARZAN/benchmarksFlat/fischerFlat/: FischerGenerator.py
TARZAN/benchmarksFlat/trainAHV93Flat/: TrainGateControllerGenerator.py
TARZAN/benchmarksFlat/vikingsFlat/: VikingsGenerator.py
TARZAN/converters/: convert_xta_to_tck.py
TARZAN/examples/CLTLoc_formulae/: formula0.txt  formula1.txt
TARZAN/examples/expressions/: simple_assignment.txt  simple_boolean.txt
TARZAN/examples/games/: arena0.txt
TARZAN/examples/timed-automata-definitions/: arena0.txt  fischer.txt  light_switch.txt  light_switch_predecessors_test.txt  ta0.txt  test_flower.txt  test_flower_small.txt  test_flower_tiny.txt  torch_no_clocks.txt
TARZAN/examples/timed_automata_definitions/: light_switch.txt
TARZAN/exceptions/: nestedCLTLocFormula_exception.h
TARZAN/headers/: library.h
TARZAN/parser/: ast.cpp  ast.h  ast_adapted.h  comparison_op_enum.h  config.h  error_handler.h  parser_on_success_handler.h  rules_classes.h  success_handler.h  timed_automaton.cpp  timed_automaton.h  timed_automaton_def.h
TARZAN/parser/enums/: arithmetic_enum.h  boolean_op_enum.h  cltloc_op_enum.h  comparison_op_enum.h  input_output_action_enum.h
TARZAN/regions/: RTS.cpp  RTS.h  RTSArena.cpp  RTSArena.h  RTSNetwork.h  Region.cpp  Region.h
TARZAN/regions/enums/: state_space_exploration_enum.h
TARZAN/regions/networkOfTA/: NetworkRegion.cpp  NetworkRegion.h  RTSNetwork.cpp  RTSNetwork.h
TARZAN/src/: library.cpp
TARZAN/testing/: successorsAndPredecessorsTesting.h
TARZAN/testing/backwardReachability/: bridge_backward.h  fischer_backward.h  flower_backward.h  generic_backward_tests.h  trainAHV93_backward.h
TARZAN/utilities/: file_utilities.h  function_utilities.h  hash_utilities.h  partition_utilities.h  printing_utilities.h
converters/: convert_xta_to_tck.py
docs/: Doxyfile
docs/doc_pages/: lianaGrammar.md  mrkdwn.md  subsubsystem1.md  subsystem1.md
docs/docs/html/: _fischer_generator_8py.html  _fischer_generator_8py.js  _network_region_8cpp.html  _network_region_8cpp.js  _network_region_8cpp_source.html  _network_region_8h.html  _r_t_s_8cpp.html  _r_t_s_8cpp.js  _r_t_s_8cpp_source.html  _r_t_s_8h.html  _r_t_s_network_8cpp.html  _r_t_s_network_8cpp_source.html  (+265 more)
docs/html/: _fischer_generator_8py_source.html  _network_region_8h.js  _network_region_8h_source.html  _r_t_s_8h.js  _r_t_s_8h_source.html  _r_t_s_network_8cpp.js  _r_t_s_network_8h.js  _r_t_s_network_8h_source.html  _region_8cpp.html  _region_8h.html  _region_8h_source.html  _s_rlatch_8cpp.html  _s_rlatch_8cpp_source.html  _vikings_generator_8py_source.html  and__or__original_8cpp.js  and__or__original_8cpp_source.html  arithmetic__enum_8h.html  arithmetic__enum_8h.js  ast_8cpp_source.html  ast_8h.js  ast_8h_source.html  backward_reachability_tester_8cpp_source.html  boolean_8cpp.js  boolean__op__enum_8h.html  boolean__op__enum_8h_source.html  bounded_gen_8py.html  bounded_gen_8py.js  bounded_gen_8py_source.html  bridge__backward_8h.html  bridge__backward_8h.js  bridge__backward_8h_source.html  class_region-members.html  class_region.html  class_region.js  classconvert__xta__to__tck_1_1_t_c_k_generator.html  classconvert__xta__to__tck_1_1_t_c_k_generator.js  classgenerate__latex__tables_1_1_benchmark_result.js  classgenerate__latex__tables_1_1_experiment-members.html  classgenerate__latex__tables_1_1_experiment.html  classnetwork_of_t_a_1_1_network_region.html  (+282 more)
examples/timed-automata-definitions/: arena0.txt  ta0.txt
(+1198 files in other folders)
